<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="320dp"
        android:orientation="vertical"
        android:layout_height="180dp">

        <TextView
            android:text="@string/please_input_id"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="60dp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:hint="@string/edit_hint"
                android:layout_width="260dp"
                android:layout_height="40dp"
                android:id="@+id/edit_text"/>

            <Button
                android:text="@string/button_go"
                android:onClick="onGoClick"
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.constraint.ConstraintLayout>