<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/scp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="测试"
                android:id="@+id/testButton"
                android:onClick="onTestClick"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/scp"
                android:onClick="onScpClick"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/scp_cn"
                android:onClick="onScpCnClick"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/jump"
                android:onClick="onJumpClick"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/jump"
                android:onClick="onAboutClick"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/jump"
                android:onClick="onSettingsClick"/>

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>